objects/FINS_Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>FINS_CIB_Ongoing_Source_of_Funds__c</fullName>
        <label>Ongoing Source of Funds</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retained Earnings</fullName>
                </value>
                <value>
                    <fullName>Debt Capital</fullName>
                </value>
                <value>
                    <fullName>Equity Capital</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Venture Capital</fullName>
                </value>
                <value>
                    <fullName>Donations</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Overdue_Tasks__c</fullName>
        <label>Overdue Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Overridden_KYC_Risk_Rating__c</fullName>
        <label>Overridden KYC Risk Rating Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Override_KYC_Risk_Rating__c</fullName>
        <label>Override KYC Risk Rating?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_PEP_Status__c</fullName>
        <label>PEP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No PEPs</fullName>
                </value>
                <value>
                    <fullName>Domestic Only PEPs - low risk</fullName>
                </value>
                <value>
                    <fullName>Domestic Only PEPs - high risk</fullName>
                </value>
                <value>
                    <fullName>Foreign PEPs - high risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Parent_Registration_Body__c</fullName>
        <label>Parent Registration Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Parent_Registration_ID__c</fullName>
        <label>Parent Registration ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Parent_Regulator_Name__c</fullName>
        <label>Parent Regulator Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACPR (French Prudential Supervision and Resolution Authority). France.</fullName>
                </value>
                <value>
                    <fullName>AMF (Autorite des Marches Financiers). France.</fullName>
                </value>
                <value>
                    <fullName>ADGM (Abu Dhabi Global Market). Abu Dhabi.</fullName>
                </value>
                <value>
                    <fullName>APRA (Australian Prudential Regulation Authority). Australia.</fullName>
                </value>
                <value>
                    <fullName>ASF (Financial Supervisory Authority). Romania.</fullName>
                </value>
                <value>
                    <fullName>ASFI (Autoridad de Supervision del Sistema Financiero). Bolivia.</fullName>
                </value>
                <value>
                    <fullName>Banco de Portugal. Portugal.</fullName>
                </value>
                <value>
                    <fullName>Bank of Greece. Greece</fullName>
                </value>
                <value>
                    <fullName>Bank of Italy. Italy</fullName>
                </value>
                <value>
                    <fullName>BIS (Banking Committee on Banking Supervision). Worldwide</fullName>
                </value>
                <value>
                    <fullName>BOE (Bank of England). United Kingdom.</fullName>
                </value>
                <value>
                    <fullName>Central Bank of Ireland. Ireland.</fullName>
                </value>
                <value>
                    <fullName>Central Bank of U.A.E. U.A.E.</fullName>
                </value>
                <value>
                    <fullName>CFPB (Consumer Financial Protection Bureau). USA</fullName>
                </value>
                <value>
                    <fullName>CFTC (U.S Commodity Futures Trading Commission). USA.</fullName>
                </value>
                <value>
                    <fullName>CFTC/NFA (National Futures Association). USA.</fullName>
                </value>
                <value>
                    <fullName>CIMA (Cayman Islands Monetary Authority). Cayman Islands.</fullName>
                </value>
                <value>
                    <fullName>CMVM (Portugese Securities Market Commission). Portugal.</fullName>
                </value>
                <value>
                    <fullName>CNMV (Comision Nacional del Mercado de Valores). Spain.</fullName>
                </value>
                <value>
                    <fullName>CONSOB (Commissione Nazionale per le Societa la Borsa). Italy.</fullName>
                </value>
                <value>
                    <fullName>CSSF (Commission de Surveillance du Secteur Financier). Luxemburg.</fullName>
                </value>
                <value>
                    <fullName>DFS (Department of Financial Services). USA.</fullName>
                </value>
                <value>
                    <fullName>DFSA (Dubai Financial Services Authority). Dubai.</fullName>
                </value>
                <value>
                    <fullName>EBA (European Banking Authority). EU.</fullName>
                </value>
                <value>
                    <fullName>ECB (European Central Bank). EU.</fullName>
                </value>
                <value>
                    <fullName>ERMC (European Risk Management Council). EU.</fullName>
                </value>
                <value>
                    <fullName>ESMA (European Securities and Markets Authority) EU.</fullName>
                </value>
                <value>
                    <fullName>European Commission. EU.</fullName>
                </value>
                <value>
                    <fullName>FCA (Financial Conduct Authority). UK.</fullName>
                </value>
                <value>
                    <fullName>FCAC (Financial Consumer Agency of Canada). Canada.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Parent_Regulatory_ID__c</fullName>
        <label>Parent Regulatory ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Parent_Stock_Exchange_s__c</fullName>
        <label>Parent Stock Exchange(s) Listed On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New York Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Nasdaq</fullName>
                </value>
                <value>
                    <fullName>Shanghai Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Euronext</fullName>
                </value>
                <value>
                    <fullName>Shenzhen Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Japan Exchange Group</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Bombay Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>National Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>London Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Saudi Stock Exchange (Tadawul)</fullName>
                </value>
                <value>
                    <fullName>Toronto Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>SIX Swiss Exchange</fullName>
                </value>
                <value>
                    <fullName>Deutsche Börse AG</fullName>
                </value>
                <value>
                    <fullName>Nasdaq Nordic and Baltic Exchanges</fullName>
                </value>
                <value>
                    <fullName>Korea Exchange</fullName>
                </value>
                <value>
                    <fullName>Australian Securities Exchange</fullName>
                </value>
                <value>
                    <fullName>Taiwan Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Johannesburg Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Tehran Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>B3 Brasil Bolsa Balcão</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Parent_Stock_Ticker_s__c</fullName>
        <label>Parent Stock Ticker(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Payments_Outside_of_the_US__c</fullName>
        <label>Making Payments Outside of the US?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Principal_Business_Function__c</fullName>
        <label>Principal Business Function</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>ESCALATED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Product_Family__c</fullName>
        <description>To be updated with product catalog in the future. Demo workaround in interim.</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equity Securities</fullName>
                </value>
                <value>
                    <fullName>Commodities</fullName>
                </value>
                <value>
                    <fullName>Debt Securities</fullName>
                </value>
                <value>
                    <fullName>Foreign Exchange</fullName>
                </value>
                <value>
                    <fullName>Derivatives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Product_Type__c</fullName>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Execution Services</fullName>
                </value>
                <value>
                    <fullName>Convertibles</fullName>
                </value>
                <value>
                    <fullName>Corporate Access</fullName>
                </value>
                <value>
                    <fullName>Corporate Insights</fullName>
                </value>
                <value>
                    <fullName>Credit Default Swaps</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets</fullName>
                </value>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>Equity Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Equity Derivatives</fullName>
                </value>
                <value>
                    <fullName>Equity Swaps</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Fixed Income Capital Raising</fullName>
                </value>
                <value>
                    <fullName>Fund Linked Products</fullName>
                </value>
                <value>
                    <fullName>FX Hedging Strategies</fullName>
                </value>
                <value>
                    <fullName>FX NDF</fullName>
                </value>
                <value>
                    <fullName>FX Options</fullName>
                </value>
                <value>
                    <fullName>FX Products</fullName>
                </value>
                <value>
                    <fullName>Industry Experience</fullName>
                </value>
                <value>
                    <fullName>Interest Rate Swaps</fullName>
                </value>
                <value>
                    <fullName>Mergers &amp; Acquisitions</fullName>
                </value>
                <value>
                    <fullName>Prime Services</fullName>
                </value>
                <value>
                    <fullName>Private Funding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Purpose_for_Opening_Account__c</fullName>
        <label>Purpose for Opening Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Receiving_Payments_Outside_US__c</fullName>
        <label>Receiving Payments From Outside the US?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Registration_Body__c</fullName>
        <label>Registration Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Registration_ID__c</fullName>
        <label>Registration ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Regulator_Name__c</fullName>
        <label>Regulator Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACPR (French Prudential Supervision and Resolution Authority). France.</fullName>
                </value>
                <value>
                    <fullName>AMF (Autorite des Marches Financiers). France.</fullName>
                </value>
                <value>
                    <fullName>ADGM (Abu Dhabi Global Market). Abu Dhabi.</fullName>
                </value>
                <value>
                    <fullName>APRA (Australian Prudential Regulation Authority). Australia.</fullName>
                </value>
                <value>
                    <fullName>ASF (Financial Supervisory Authority). Romania.</fullName>
                </value>
                <value>
                    <fullName>ASFI (Autoridad de Supervision del Sistema Financiero). Bolivia.</fullName>
                </value>
                <value>
                    <fullName>Banco de Portugal. Portugal.</fullName>
                </value>
                <value>
                    <fullName>Bank of Greece. Greece</fullName>
                </value>
                <value>
                    <fullName>Bank of Italy. Italy</fullName>
                </value>
                <value>
                    <fullName>BIS (Banking Committee on Banking Supervision). Worldwide</fullName>
                </value>
                <value>
                    <fullName>BOE (Bank of England). United Kingdom.</fullName>
                </value>
                <value>
                    <fullName>Central Bank of Ireland. Ireland.</fullName>
                </value>
                <value>
                    <fullName>Central Bank of U.A.E. U.A.E.</fullName>
                </value>
                <value>
                    <fullName>CFPB (Consumer Financial Protection Bureau). USA</fullName>
                </value>
                <value>
                    <fullName>CFTC (U.S Commodity Futures Trading Commission). USA.</fullName>
                </value>
                <value>
                    <fullName>CFTC/NFA (National Futures Association). USA.</fullName>
                </value>
                <value>
                    <fullName>CIMA (Cayman Islands Monetary Authority). Cayman Islands.</fullName>
                </value>
                <value>
                    <fullName>CMVM (Portugese Securities Market Commission). Portugal.</fullName>
                </value>
                <value>
                    <fullName>CNMV (Comision Nacional del Mercado de Valores). Spain.</fullName>
                </value>
                <value>
                    <fullName>CONSOB (Commissione Nazionale per le Societa la Borsa). Italy.</fullName>
                </value>
                <value>
                    <fullName>CSSF (Commission de Surveillance du Secteur Financier). Luxemburg.</fullName>
                </value>
                <value>
                    <fullName>DFS (Department of Financial Services). USA.</fullName>
                </value>
                <value>
                    <fullName>DFSA (Dubai Financial Services Authority). Dubai.</fullName>
                </value>
                <value>
                    <fullName>EBA (European Banking Authority). EU.</fullName>
                </value>
                <value>
                    <fullName>ECB (European Central Bank). EU.</fullName>
                </value>
                <value>
                    <fullName>ERMC (European Risk Management Council). EU.</fullName>
                </value>
                <value>
                    <fullName>ESMA (European Securities and Markets Authority) EU.</fullName>
                </value>
                <value>
                    <fullName>European Commission. EU.</fullName>
                </value>
                <value>
                    <fullName>FCA (Financial Conduct Authority). UK.</fullName>
                </value>
                <value>
                    <fullName>FCAC (Financial Consumer Agency of Canada). Canada.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Regulatory_ID__c</fullName>
        <label>Regulatory ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Request_Third_Party_Data__c</fullName>
        <label>Request Third-Party Data Ingestion?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capital Markets KYC Reliance Fund Onboarding</fullName>
                </value>
                <value>
                    <fullName>Capital Markets Investment Manager Onboarding</fullName>
                </value>
                <value>
                    <fullName>Capital Markets Investment Manager KYC Refresh</fullName>
                </value>
                <value>
                    <fullName>Capital Markets KYC Reliance Fund Product Addition</fullName>
                </value>
                <value>
                    <fullName>Commercial Banking Onboarding</fullName>
                </value>
                <value>
                    <fullName>Commercial Banking KYC Refresh</fullName>
                </value>
                <value>
                    <fullName>Asset Management Institutional Onboarding</fullName>
                </value>
                <value>
                    <fullName>Asset Management Retail Onboarding</fullName>
                </value>
                <value>
                    <fullName>Asset Management KYC Refresh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Requester_Capacity__c</fullName>
        <label>Requester Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized Signer</fullName>
                </value>
                <value>
                    <fullName>KYC Representative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Requester_Email__c</fullName>
        <label>Requester Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Requester_First_Name__c</fullName>
        <label>Requester First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Requester_Job_Title__c</fullName>
        <label>Requester Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Requester_Last_Name__c</fullName>
        <label>Requester Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Requester_Telephone__c</fullName>
        <label>Requester Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_SIC_Code__c</fullName>
        <label>SIC Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100 - AGRICULTURAL PRODUCTION-CROPS</fullName>
                </value>
                <value>
                    <fullName>200 - AGRICULTURAL PROD-LIVESTOCK &amp; ANIMAL SPECIALTIES</fullName>
                </value>
                <value>
                    <fullName>700 - AGRICULTURAL SERVICES</fullName>
                </value>
                <value>
                    <fullName>800 - FORESTRY</fullName>
                </value>
                <value>
                    <fullName>900 - FISHING, HUNTING AND TRAPPING</fullName>
                </value>
                <value>
                    <fullName>1000 - METAL MINING</fullName>
                </value>
                <value>
                    <fullName>1040 - GOLD AND SILVER ORES</fullName>
                </value>
                <value>
                    <fullName>1090 - MISCELLANEOUS METAL ORES</fullName>
                </value>
                <value>
                    <fullName>1220 - BITUMINOUS COAL &amp; LIGNITE MINING</fullName>
                </value>
                <value>
                    <fullName>1221 - BITUMINOUS COAL &amp; LIGNITE SURFACE MINING</fullName>
                </value>
                <value>
                    <fullName>1311 - CRUDE PETROLEUM &amp; NATURAL GAS</fullName>
                </value>
                <value>
                    <fullName>1381 - DRILLING OIL &amp; GAS WELLS</fullName>
                </value>
                <value>
                    <fullName>1382 - OIL &amp; GAS FIELD EXPLORATION SERVICES</fullName>
                </value>
                <value>
                    <fullName>1389 - OIL &amp; GAS FIELD SERVICES, NEC</fullName>
                </value>
                <value>
                    <fullName>1400 - MINING &amp; QUARRYING OF NONMETALLIC MINERALS (NO FUELS)</fullName>
                </value>
                <value>
                    <fullName>1520 - GENERAL BLDG CONTRACTORS - RESIDENTIAL BLDGS</fullName>
                </value>
                <value>
                    <fullName>1531 - OPERATIVE BUILDERS</fullName>
                </value>
                <value>
                    <fullName>1540 - GENERAL BLDG CONTRACTORS - NONRESIDENTIAL BLDGS</fullName>
                </value>
                <value>
                    <fullName>1600 - HEAVY CONSTRUCTION OTHER THAN BLDG CONST - CONTRACTORS</fullName>
                </value>
                <value>
                    <fullName>1623 - WATER, SEWER, PIPELINE, COMM &amp; POWER LINE CONSTRUCTION</fullName>
                </value>
                <value>
                    <fullName>1700 - CONSTRUCTION - SPECIAL TRADE CONTRACTORS</fullName>
                </value>
                <value>
                    <fullName>1731 - ELECTRICAL WORK</fullName>
                </value>
                <value>
                    <fullName>2000 - FOOD AND KINDRED PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>2011 - MEAT PACKING PLANTS</fullName>
                </value>
                <value>
                    <fullName>2013 - SAUSAGES &amp; OTHER PREPARED MEAT PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>2015 - POULTRY SLAUGHTERING AND PROCESSING</fullName>
                </value>
                <value>
                    <fullName>2020 - DAIRY PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>2024 - ICE CREAM &amp; FROZEN DESSERTS</fullName>
                </value>
                <value>
                    <fullName>2030 - CANNED, FROZEN &amp; PRESERVD FRUIT, VEG &amp; FOOD SPECIALTIES</fullName>
                </value>
                <value>
                    <fullName>2033 - CANNED, FRUITS, VEG, PRESERVES, JAMS &amp; JELLIES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_SWIFT_Code__c</fullName>
        <label>SWIFT Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Screening_Results__c</fullName>
        <label>Screening Results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Hits</fullName>
                </value>
                <value>
                    <fullName>False Positives Only</fullName>
                </value>
                <value>
                    <fullName>True Hit(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Screening_Risk_Rating__c</fullName>
        <label>Screening Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Send_to_Customer_for_Review__c</fullName>
        <label>Send to Customer for Review?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Slack_Channel_Id__c</fullName>
        <label>Slack Channel Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Source_of_Funds_Description__c</fullName>
        <label>Source of Funds Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RM Onboarding Initiation</fullName>
                    <default>true</default>
                    <label>RM Onboarding Initiation</label>
                </value>
                <value>
                    <fullName>Onboarding Initial Review</fullName>
                </value>
                <value>
                    <fullName>Client Outreach</fullName>
                </value>
                <value>
                    <fullName>Onboarding Validation</fullName>
                </value>
                <value>
                    <fullName>Screening and Risk</fullName>
                </value>
                <value>
                    <fullName>Regulatory Approval</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>